--- a/index.html
+++ b/index.html
@@ -116,12 +116,7 @@
       <section class="section-about" id="about">
         <div class="container grid grid--2-cols grid--center-v">
           <div class="about-img-box">
-            <img
-              src="../img/car-section.png"
-              class="about-img"
-              alt="iPhone app
-                  preferences selection screen"
-            />
+            <img src="../img/car-section.png" class="about-img" alt="Audi Q8" />
           </div>
           <div class="about-text-box">
             <h6>About Q8</h6>
@@ -190,7 +185,7 @@
           <div class="container pricing-grid grid--4-cols margin-bottom-md">
             <div class="pricing-plan" id="1">
               <header class="plan-header">
-                <img src="img/car-2.png" alt="" />
+                <img src="img/car-2.png" alt="Audi Q3" />
                 <p>5 seats, 4 Doors</p>
                 <h2>Audi Q3 2020</h2>
                 <p
@@ -202,15 +197,15 @@
               </header>
               <ul class="list">
                 <li class="list-item">
-                  <img src="img/correct.png" alt="" />
+                  <img src="img/correct.png" alt="correct" />
                   <span>Includes 300 free km</span>
                 </li>
                 <li class="list-item">
-                  <img src="img/correct.png" alt="" />
+                  <img src="img/correct.png" alt="correct" />
                   <span>Theft Protection</span>
                 </li>
                 <li class="list-item">
-                  <img src="img/correct.png" alt="" />
+                  <img src="img/correct.png" alt="correct" />
                   <span>Non Refundable</span>
                 </li>
               </ul>
@@ -224,7 +219,7 @@
             </div>
             <div class="pricing-plan" id="2">
               <header class="plan-header">
-                <img src="img/car-3.png" alt="" />
+                <img src="img/car-3.png" alt="Audi A4" />
                 <p>5 seats, 4 Doors</p>
                 <h2>Audi A4 2020</h2>
                 <p
@@ -236,15 +231,15 @@
               </header>
               <ul class="list">
                 <li class="list-item">
-                  <img src="img/correct.png" alt="" />
+                  <img src="img/correct.png" alt="correct" />
                   <span>Includes 300 free km</span>
                 </li>
                 <li class="list-item">
-                  <img src="img/correct.png" alt="" />
+                  <img src="img/correct.png" alt="correct" />
                   <span>Theft Protection</span>
                 </li>
                 <li class="list-item">
-                  <img src="img/correct.png" alt="" />
+                  <img src="img/correct.png" alt="correct" />
                   <span>Non Refundable</span>
                 </li>
               </ul>
@@ -258,7 +253,7 @@
             </div>
             <div class="pricing-plan pricing-plan--new" id="3">
               <header class="plan-header">
-                <img src="img/car-1.png" alt="" />
+                <img src="img/car-1.png" alt="Audi A3" />
                 <p>5 seats, 4 Doors</p>
                 <h2>Audi A3 2020</h2>
                 <p
@@ -270,15 +265,15 @@
               </header>
               <ul class="list">
                 <li class="list-item">
-                  <img src="img/correct.png" alt="" />
+                  <img src="img/correct.png" alt="correct" />
                   <span>Includes 300 free km</span>
                 </li>
                 <li class="list-item">
-                  <img src="img/correct.png" alt="" />
+                  <img src="img/correct.png" alt="correct" />
                   <span>Theft Protection</span>
                 </li>
                 <li class="list-item">
-                  <img src="img/correct.png" alt="" />
+                  <img src="img/correct.png" alt="correct" />
                   <span>Non Refundable</span>
                 </li>
               </ul>
@@ -292,7 +287,7 @@
             </div>
             <div class="pricing-plan pricing-plan--new" id="4">
               <header class="plan-header">
-                <img src="img/car-4.png" alt="" />
+                <img src="img/car-4.png" alt="Audi Q7" />
                 <p>5 seats, 4 Doors</p>
                 <h2>Audi Q7 2020</h2>
                 <p
@@ -304,15 +299,15 @@
               </header>
               <ul class="list">
                 <li class="list-item">
-                  <img src="img/correct.png" alt="" />
+                  <img src="img/correct.png" alt="correct" />
                   <span>Includes 300 free km</span>
                 </li>
                 <li class="list-item">
-                  <img src="img/correct.png" alt="" />
+                  <img src="img/correct.png" alt="correct" />
                   <span>Theft Protection</span>
                 </li>
                 <li class="list-item">
-                  <img src="img/correct.png" alt="" />
+                  <img src="img/correct.png" alt="correct" />
                   <span>Non Refundable</span>
                 </li>
               </ul>
@@ -331,7 +326,7 @@
           <div class="modal-relative">
             <div class="modal-grid">
               <div class="modal-car-info">
-                <img id="modal-image" alt="" />
+                <img id="modal-image" />
                 <p id="modal-seats"></p>
                 <h1 id="modal-name"></h1>
                 <div class="modal-price-starting">
@@ -447,7 +442,11 @@
             </form>
           </div>
         </div>
-        <img src="img/contact.png" class="contact-image" alt="" />
+        <img
+          src="img/contact.png"
+          class="contact-image"
+          alt="Audi green color"
+        />
         <div class="footer-section">
           <p class="footer-paragraph">©2020 FSD. ALL RIGHTS RESERVED</p>
           <ul class="footer-list">
